--- a/package.json
+++ b/package.json
@@ -6,16 +6,32 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "embla-carousel-autoplay": "^8.0.1",
+    "embla-carousel-react": "^8.0.0",
     "geist": "^1.2.1",
+    "input-otp": "^1.2.4",
+    "lucide-react": "^0.364.0",
     "next": "latest",
+    "next-nprogress-bar": "^2.3.11",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.3.3",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
