--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.0.1",
     "embla-carousel-react": "^8.0.0",
     "geist": "^1.2.1",
@@ -23,10 +30,13 @@
     "lucide-react": "^0.364.0",
     "next": "latest",
     "next-nprogress-bar": "^2.3.11",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.2.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "3.4.1",
